support more info in version meta
